--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <pre id="out">(results will appear here)</pre>
   </div>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=1"></script>
 
   <script>
     // Simple UI feedback hook (no Supabase logic here)
