Update checkin.html for qr_token to function

--- a/checkin.html
+++ b/checkin.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="toolbar">
-        <input id="qrInput" placeholder="Paste QR value (qr_code_url)..." />
+        <input id="qrInput" placeholder="Paste QR token (qr_token)..." />
         <button id="lookupBtn" class="btn" type="button">Lookup</button>
       </div>
 
@@ -84,6 +84,6 @@
     </section>
   </main>
 
-  <script src="app.js?v=1"></script>
+  <script src="app.js?v=2"></script>
 </body>
 </html>
