--- a/checkin.html
+++ b/checkin.html
@@ -48,7 +48,7 @@
     </div>
 
     <div class="topbar-actions">
-      <a class="btn ghost" href="index.html">  </a>
+      <a class="btn ghost" href="index.html">控制面板</a>
       <span id="authPill" class="pill neutral">未登录</span>
       <button id="logoutBtn" class="btn ghost" type="button" style="display:none;">退出</button>
     </div>
