--- a/checkin.html
+++ b/checkin.html
@@ -41,14 +41,16 @@
 <body data-page="checkin">
   <header class="topbar">
     <div class="brand">
-      <img src="images/moonstarslogo.png" alt="Moon Stars Singing Club" class="logo" />
+      <a class="btn ghost" href="index.html"> 
+        <img src="images/moonstarslogo.png" alt="Moon Stars Singing Club" class="logo" />
+      </a>
       <div class="brand-text">
         <div class="brand-title">月牙泉/星子湾歌友会</div>
       </div>
     </div>
 
     <div class="topbar-actions">
-      <a class="btn ghost" href="index.html">控制面板</a>
+      <a class="btn ghost" href="index.html"> 控制面板 </a>
       <span id="authPill" class="pill neutral">未登录</span>
       <button id="logoutBtn" class="btn ghost" type="button" style="display:none;">退出</button>
     </div>
