--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </div>
 
     <div class="topbar-actions">
+      <a class="btn ghost" href="admin_add_participants.html"> Add Participants </a>
+
       <span id="authPill" class="pill neutral">未登录</span>
       <button id="logoutBtn" class="btn ghost" type="button" style="display:none;">退出</button>
     </div>
